--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,28 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.table-wrapper {
+  width: 100%;
+  margin: 30px auto;
+  background: #fff;
+  padding-left: 20%;
+  padding-right: 20%;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+}
+.button{
+  background-color: red; /* Green */
+  border: none;
+  color: white;
+  padding: 10;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+td, th{
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
